force-app/main/default/objects/Case_Email__c/Case_Email__c.object-meta.xml
<CustomObject>
    <label>Case Email</label>
    <nameField>
        <label>Case Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>