force-app/main/default/objects/Case_Email__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Emails</relationshipLabel>
    <relationshipName>Case_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>