force-app/main/default/objects/Case_Email__c/fields/Case_Email_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_Number__c</fullName>
    <displayFormat>CE-{0000000}</displayFormat>
    <label>Case Email Number</label>
    <type>AutoNumber</type>
</CustomField>