force-app/main/default/objects/Case_Email__c/fields/EM_Sharepoint_Web_Url__c.field-meta.xml
<CustomField>
    <fullName>EM_Sharepoint_Web_Url__c</fullName>
    <label>EM Sharepoint Web Url</label>
    <type>Url</type>
</CustomField>