force-app/main/default/objects/Case_Email__c/fields/Email_Message_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Created_Date__c</fullName>
    <label>Email Message Created Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>