force-app/main/default/objects/Case_Email__c/fields/Email_Message_SharePoint_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_SharePoint_Id__c</fullName>
    <externalId>true</externalId>
    <label>Email Message SharePoint Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>