force-app/main/default/objects/Case_Email__c/fields/Email_Message_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Subject__c</fullName>
    <label>Email Message Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>