force-app/main/default/objects/Case_Email__c/fields/EmailMessage_Id__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage_Id__c</fullName>
    <label>EmailMessage Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>