force-app/main/default/objects/Case_Email__c/fields/Files_Share_Point_Id__c.field-meta.xml
<CustomField>
    <fullName>Files_Share_Point_Id__c</fullName>
    <label>Files Share Point Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>