force-app/main/default/objects/Case_Email__c/fields/Files_SP_Id__c.field-meta.xml
<CustomField>
    <fullName>Files_SP_Id__c</fullName>
    <externalId>true</externalId>
    <label>Files SP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>