force-app/main/default/objects/Case_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Email_Number__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Email_Message_Created_Date__c</columns>
    <columns>Email_Message_SharePoint_Id__c</columns>
    <columns>EmailMessage_Id__c</columns>
    <columns>Case_Id__c</columns>
    <columns>Email_Message_Subject__c</columns>
    <columns>Email_Message_SP_Folder_Id__c</columns>
    <columns>Files_Share_Point_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>